Better background-size demo.

--- a/index.html
+++ b/index.html
@@ -1349,30 +1349,30 @@
 				</div>
 				<p>The four black and white gradients are great for image overlays (to increase readabilty for text elements).</p>
 				<div class="d:f@L fw:w fw:b c:w">
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:b.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">black .25<br><code class="ml:a">bgi:b.25</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">black .5<br><code class="ml:a">bgi:b.5</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:b.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">black .75<br><code class="ml:a">bgi:b.75</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:b bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">black<br><code class="ml:a">bgi:b</code></div>
 					</div>
 				</div>
 				<div class="d:f@L fw:w fw:b c:b">
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:w.25 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">white .25<br><code class="ml:a">bgi:w.25</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:w.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">white .5<br><code class="ml:a">bgi:w.5</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:w.75 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">white .75<br><code class="ml:a">bgi:w.75</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400); background-size: cover;" class="fb:25% h:16r">
+					<div style="background-image: url(https://unsplash.it/600/400);" class="fb:25% h:16r bgs:cover">
 						<div class="p:1r bgi:w bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">white<br><code class="ml:a">bgi:w</code></div>
 					</div>
 				</div>
@@ -1401,13 +1401,13 @@
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">background-size</h3></header>
 				<div class="d:f@L fw:w fw:b c:w">
-					<div style="background-image: url(https://unsplash.it/600/400)" class="fb:33% h:16r bgs:a bgc:b.2">
+					<div style="background-image: url(https://unsplash.it/g/400/400)" class="fb:33% h:16r bgs:a bgc:b.2">
 						<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">auto<br><code class="ml:a">bgs:a</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400)" class="fb:33% h:16r bgs:contain bgc:b.2">
+					<div style="background-image: url(https://unsplash.it/g/400/400)" class="fb:33% h:16r bgs:contain bgc:b.2">
 						<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">contain<br><code class="ml:a">bgs:contain</code></div>
 					</div>
-					<div style="background-image: url(https://unsplash.it/600/400)" class="fb:33% h:16r bgs:cover">
+					<div style="background-image: url(https://unsplash.it/g/400/400)" class="fb:33% h:16r bgs:cover">
 						<div class="p:1r bgi:b.5 bw:thick ta:c bc:t w:100% h:100% d:f ai:fe">cover<br><code class="ml:a">bgs:cover</code></div>
 					</div>
 				</div>
