Added subtle transitions to the tooltips.

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@
 					<li>none <code class="fs:1r">lst:n</code></li>
 				</ul>
 				<ul class="fs:2r fs:4r@M lst:d">
-					<li>disc <code class="fs:1r">lst:d</code></li>
-					<li class="c:b.1">disc</li>
+					<li>disc/dot <code class="fs:1r">lst:d</code></li>
+					<li class="c:b.1">disc/dot</li>
 				</ul>
 				<ul class="fs:2r fs:4r@M lst:c">
 					<li>check mark <code class="fs:1r">lst:c</code></li>
@@ -746,7 +746,7 @@
 				<div><span class="v:c">collapse</span><code>v:c</code>
 					<hint>(collapse – see source code)</hint>
 				</div>
-				<div><span class="v:h v:v:h">visible on hover</span><code>v:h</code>+ <code>v:v:h</code>
+				<div><span class="v:h v:v:h t:medium">visible on hover</span><code>v:h</code>+ <code>v:v:h</code>
 					<hint>(visible on hover – see source code)</hint>
 				</div>
 			</article>
@@ -987,9 +987,7 @@
 					<div class="fg:1 brw:medium p:1r bs:.125r:h">1 <code>fg:1</code></div>
 					<div class="fg:2 brw:medium p:1r bs:.125r:h">2 <code>fg:2</code></div>
 					<div class="fg:4 brw:medium p:1r bs:.125r:h">4 <code>fg:4</code></div>
-				</div>
-				<hint>View this demo on a larger screen, to show the effect.</hint>
-			</article>
+				</div> <span class="d:b d:n@M"><hint>View this demo on a larger screen, to show the effect.</hint></span> </article>
 			<article id="layout__flex-shrink">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">flex-shrink</h3></header>
@@ -1443,7 +1441,7 @@
 			</article>
 		</section>
 	</main>
-	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a>(Professor at the University of Applied Sciences Ulm, Germany)</address>. Greatly inspired by <a href="http://basscss" target="_blank">basscss</a>and <a href="http://tachyons.io"
+	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address>. Greatly inspired by <a href="http://basscss" target="_blank">basscss</a>and <a href="http://tachyons.io"
 		  target="_blank">tachyons</a>.</footer>
 	<!-- including custom tags -->
 	<script type="riot/tag" src="tags/hoverstyles.tag"></script>
