--- a/index.html
+++ b/index.html
@@ -1441,7 +1441,7 @@
 			</article>
 		</section>
 	</main>
-	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address>. Greatly inspired by <a href="http://basscss" target="_blank">basscss</a>and <a href="http://tachyons.io"
+	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address>. Inspired by <a href="http://basscss.com" target="_blank">basscss</a> and <a href="http://tachyons.io"
 		  target="_blank">tachyons</a>.</footer>
 	<!-- including custom tags -->
 	<script type="riot/tag" src="tags/hoverstyles.tag"></script>
