--- a/blank.html
+++ b/blank.html
@@ -6,6 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>blank | elegant html elements</title>
 	<link href="css/blank.css" rel="stylesheet">
+	<!-- development cdn -->
+	<link rel="stylesheet" href="../blinkui/css/blink.css">
 	<style>
 		/* Basic site layout: */
 
@@ -42,6 +44,7 @@
 			color: var(--bg-color);
 			padding: var(--2);
 		}
+
 		/* Table of contents navigation list: */
 
 		nav#toc>ul>li {
@@ -55,6 +58,7 @@
 			padding-bottom: var(--\.5);
 			display: block;
 		}
+
 		/* Back to top links: */
 
 		article>footer {
@@ -67,6 +71,7 @@
 			padding: var(--1);
 			background-color: var(--darken);
 		}
+
 		/* Fake page transition (fade-in): */
 
 		@keyframes fade {
@@ -84,7 +89,7 @@
 <body>
 	<header id="top">
 		<h1 class="c-cyan">blank<span style="color: var(--color-text-lighter); font-weight: 100;">.css</span></h1>
-		<p><u>A starting point for elegant html elements.</u></p>
+		<p><em>A starting point for elegant html elements.</em></p>
 		<p style="color: var(--color-text-lighter); font-weight: 100;">Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
 	</header>
 	<nav id="toc">
@@ -493,7 +498,7 @@
 			</article>
 			<article id="embedded__svg">
 				<header>
-					<h3>SVG</h3> </header> <svg style="width:8rem; height:8rem;">
+					<h3>SVG</h3> </header> <svg style="width:lem; height:8rem;">
 					<circle cx="0" cy="0" r="128"></circle>
 				</svg> <svg data-icon="camera" viewBox="0 0 32 32" style="width:2rem">
 					<title>camera icon (from geomicons.com)</title>
