Better font-size for vertical-alignment demo.

--- a/index.html
+++ b/index.html
@@ -501,12 +501,12 @@
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:m">vertical-align</h3></header>
 				<div>
-					<div><span class="fs:xl">baseline (default)</span><code class="va:bl">va:bl</code></div>
-					<div><span class="fs:xl">top</span><code class="va:t">va:t</code></div>
-					<div><span class="fs:xl">middle</span><code class="va:m">va:m</code></div>
-					<div><span class="fs:xl">bottom</span><code class="va:b">va:m</code></div>
-					<div><span class="fs:xl">super</span><code class="va:sup">va:sup</code></div>
-					<div><span class="fs:xl">sub</span><code class="va:sub">va:sub</code></div>
+					<div><span class="fs:l">baseline (default)</span><code class="va:bl">va:bl</code></div>
+					<div><span class="fs:l">top</span><code class="va:t">va:t</code></div>
+					<div><span class="fs:l">middle</span><code class="va:m">va:m</code></div>
+					<div><span class="fs:l">bottom</span><code class="va:b">va:m</code></div>
+					<div><span class="fs:l">super</span><code class="va:sup">va:sup</code></div>
+					<div><span class="fs:l">sub</span><code class="va:sub">va:sub</code></div>
 				</div>
 			</article>
 			<article id="layout__top">
