Optimized responsiveness of embedded media elements + some design changes.

--- a/blank.html
+++ b/blank.html
@@ -88,9 +88,9 @@
 
 <body>
 	<header id="top">
-		<h1 class="c-cyan">blank<span style="color: var(--color-text-lighter); font-weight: 100;">.css</span></h1>
+		<h1 class="c:blue">blank</h1>
 		<p><em>A starting point for elegant html elements.</em></p>
-		<p style="color: var(--color-text-lighter); font-weight: 100;">Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
+		<p class="c:b:m fw:s">Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
 	</header>
 	<nav id="toc">
 		<ul>
