--- a/index.html
+++ b/index.html
@@ -204,15 +204,15 @@
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:m">list-style</h3></header>
 				<ul class="ls:n fs:l">
-					<li>none <code class="fs:m">ls:n</code></li>
+					<li>none <code>ls:n</code></li>
 					<li class="c:b:xs">none</li>
 				</ul>
 				<ul class="ls:d fs:l">
-					<li>dash <code class="fs:m">ls:d</code></li>
+					<li>dash <code>ls:d</code></li>
 					<li class="c:b:xs">dash</li>
 				</ul>
 				<ul class="ls:b fs:l">
-					<li>bullet <code class="fs:m">ls:b</code></li>
+					<li>bullet <code>ls:b</code></li>
 					<li class="c:b:xs">bullet</li>
 				</ul>
 			</article>
