Marked elements that were not styled.

--- a/blank.html
+++ b/blank.html
@@ -537,7 +537,7 @@
 						<div style="display:flex;">
 							<div style="flex-basis: 50%;"> <label for="input__text2">Text Input (left)</label> <input id="input__text2" type="text" placeholder="Text Input" name="Text"> </div>
 							<div style="flex-basis: 50%;"> <label for="input__text3">Text Input (right)</label> <input id="input__text3" type="text" placeholder="Text Input" name="Text" value="Entered text (value)"> </div>
-						</div> <label for="input__password">Password</label> <input id="input__password" type="password" placeholder="Type your Password" name="Password"> <label for="input__file">File Input</label> <input id="input__file" type="file" accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document"
+						</div> <label for="input__password">Password</label> <input id="input__password" type="password" placeholder="Type your Password" name="Password"> <label for="input__file">File Input (Unstyled)</label> <input id="input__file" type="file" accept=".doc,.docx,.xml,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document"
 						  name="File upload"> </fieldset>
 					<nav><a href="#top">&uarr; Top</a></nav>
 					<hr>
@@ -605,7 +605,7 @@
 			</article>
 			<article id="forms__meter">
 				<header>
-					<h3>Meter</h3>
+					<h3>Meter (Unstyled)</h3>
 					<p>The meter element represents a scalar measurement within a known range, or a fractional value; for example disk usage, the relevance of a query result, or the fraction of a voting population to have selected a particular candidate.</p>
 				</header>
 				<meter value="7.5" min="0" max="10">2 out of 10</meter> <meter value="0.15" low="0.25"></meter> <meter low="0.25" optimum="0.8" high="0.75" value="0.2"></meter>
