Fixed static css file paths

--- a/blank.html
+++ b/blank.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>blank | elegant html elements</title>
 	<link href="css/blank.css" rel="stylesheet">
-	<link rel="stylesheet" href="../blinkui/css/blink.css">
 	<style>
 		/* Basic site layout: */
 
@@ -87,9 +86,9 @@
 
 <body>
 	<header id="top">
-		<h1 class="c:blue">blank</h1>
+		<h1>blank</h1>
 		<p><em>A starting point for elegant html elements.</em></p>
-		<p class="c:b:m fw:s">Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
+		<p>Have a look at <a href="index.html">blink UI</a> — a mighty css toolkit for web and interface design in the blink of an eye.</p>
 	</header>
 	<nav id="toc">
 		<ul>
