--- a/blank.html
+++ b/blank.html
@@ -457,7 +457,7 @@
 						<source srcset="https://source.unsplash.com/random/1600x900">
 						<!-- img tag for browsers that do not support picture element --><img src="https://source.unsplash.com/random/1600x900" alt="Image alt text"> </picture>
 					<h4>Background-image</h4>
-					<p style="background-image: url(https://source.unsplash.com/random/1600x900); background-size: cover; width 100%; padding: var(--2); font-size: var(--4); text-align: center; color: var(--bg-color);"><b>Wood.</b></p>
+					<p style="background-image: url(https://source.unsplash.com/random/1600x900); background-size: cover; width 100%; padding: var(--2); font-size: var(--4); text-align: center; color: var(--bg-color);"><b>Hi!</b></p>
 				</div>
 				<p><small>(Images source: <a href="https://unsplash.com/">unsplash.com</a>)</small></p>
 				<footer>
