Fixed z-index demo.

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 			<article id="layout__z-index">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:m">z-index</h3></header>
-				<div class="ta:c">
+				<div class="ta:c lh:s">
 					<div><span class="zi:xs p:xs bw:s bgc:b:l c:w fs:l">Extra small (-200)</span><code>zi:xs</code></div>
 					<div><span class="zi:s p:xs bw:s bgc:b:l c:w fs:l">Small (-100)</span><code>zi:s</code></div>
 					<div><span class="zi:m p:xs bw:s bgc:b:m c:w fs:l">Medium (0)</span><code>zi:m</code></div>
