Updated blinkUI docs

--- a/blank.html
+++ b/blank.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>blank | elegant html elements</title>
 	<link href="css/blank.css" rel="stylesheet">
+	<!--<link href="../blinkui/css/blink.css" rel="stylesheet">-->
 	<style>
 		/* Basic site layout: */
 
